--- a/view/locale/ru/template/default/index.ejs
+++ b/view/locale/ru/template/default/index.ejs
@@ -12,7 +12,7 @@ block('title', 'Создание метаданных приложения');
         </p>
         <p>
             Созданные сущности находятся в отдельном хранилище.
-            Чтобы данные попали в приложение необходимо экспортировать их в директорию <b>metadata/app</b>.
+            Чтобы данные попали в приложение необходимо экспортировать их в директорию <code>metadata/app</code>.
         </p>
     </div>
 </div>
@@ -45,21 +45,22 @@ block('title', 'Создание метаданных приложения');
             Параметры связи устанавливаются на вкладке "Отношение".
             <br>
             Тип "Ссылочный" хранит ссылку непосредственно в объекте класса.
-            Например, комментарий имеет ссылку на статью, к которой он относится.
+            Например, комментарий хранит ссылку на статью, к которой он относится.
         </p>
         <p>
             Тип "Обратная ссылка" наоборот, извлекает данные связи из объекта ссылочного класса.
             <br>
-            Например, комментарии для статьи извлекаются по обратной ссылке,
+            Например, в статье комментарии извлекаются по обратной ссылке,
             потому что каждый комментарий хранит в себе идентификатор статьи.
             В самой статье никаких данных о комментариях не хранится.
         </p>
         <p>
             Связь может быть множественной или одиночной.
-            <br>
-            Ссылка на статью в комментарии - это пример одиночной связи.
-            Ссылка на комментарии в статье - это пример множественной связи.
         </p>
+        <ul>
+            <li>Ссылка в комментарии на статью - это пример одиночной связи.</li>
+            <li>Ссылка в статье на комментарии - это пример множественной связи.</li>
+        </ul>
     </div>
 </div>
 
@@ -73,15 +74,12 @@ block('title', 'Создание метаданных приложения');
             <br>
             Например, при отображении объектов в списке могут быть показаны только избранные атрибуты.
         </p>
-        <p>
-            Кодовое имя "list" используется для представления объектов в списке.
-            <br>
-            Кодовое имя "create" используется для представления объекта при создании.
-            <br>
-            Кодовое имя "edit" используется для представления объекта при редактировании.
-            <br>
-            Кодовое имя "eager" используется для представления объекта при жадной загрузке.
-        </p>
+        <ul>
+            <li>Кодовое имя <code>list</code> используется для представления объектов в списке.</li>
+            <li>Кодовое имя <code>create</code> используется для представления объекта при создании.</li>
+            <li>Кодовое имя <code>edit</code> используется для представления объекта при редактировании.</li>
+            <li>Кодовое имя <code>eager</code> используется для представления объекта при жадной загрузке.</li>
+        </ul>
     </div>
 </div>
 
@@ -91,7 +89,7 @@ block('title', 'Создание метаданных приложения');
     </div>
     <div class="card-body">
         <p>
-            Меню в боковой панели модуля "Офис" создается из секции навигации с кодовым именем "main".
+            Меню в боковой панели модуля "Офис" создается из секции навигации с кодовым именем <code>main</code>.
         </p>
     </div>
 </div>
