--- a/view/template/classAttr/group/relation.ejs
+++ b/view/template/classAttr/group/relation.ejs
@@ -94,7 +94,7 @@ const typeTrigger = ['START TRIGGER', 'type'];
 
 <%- include(_view.get('_part/attr/relation'), {
     attr: 'via',
-    extHint: 'Mediation to select related objects',
+    extHint: 'Intermediate link for selecting related objects',
     data: {
         columns: [{
             name: 'refClass',
