--- a/view/template/default/index.ejs
+++ b/view/template/default/index.ejs
@@ -8,10 +8,10 @@ block('title', 'Create app metadata');
         <p>
             The Studio module creates metadata describing domain entities and relationships between them.
             <br>
-            For example, the Blog app consists of the Article, Category, Comment, and others classes.
+            For example, a Blog App consists of Article, Category, Comment, and others classes.
         </p>
         <p>
-            The created entities are located in a separate store.
+            All created entities are located in a separate store.
             Export them to your app metadata folder to start using.
         </p>
     </div>
@@ -25,7 +25,7 @@ block('title', 'Create app metadata');
         <p>
             Class attribute describes a single class element.
             <br>
-            For example, the Article class consists of the Title, Content, Date and other attributes.
+            For example, the Article class consists of Title, Content, Date and other attributes.
         </p>
         <p>
             Each attribute has a specific type depending on the stored data.
@@ -55,10 +55,11 @@ block('title', 'Create app metadata');
         </p>
         <p>
             The linking can be multiple or single.
-            <br>
-            An article link in a comment is an example of a single link.
-            Linking to comments in an article is an example of a multiple link.
         </p>
+        <ul>
+            <li>An article link in a comment is an example of the single link.</li>
+            <li>Linking to comments in an article is an example of the multiple link.</li>
+        </ul>
     </div>
 </div>
 
@@ -72,15 +73,12 @@ block('title', 'Create app metadata');
             <br>
             For example, when displaying objects in a list, only selected attributes can be shown.
         </p>
-        <p>
-            The codename "list" is used to represent objects in a list.
-            <br>
-            The codename "create" is used to represent an object when it is created.
-            <br>
-            The codename "edit" is used to represent an object when edited.
-            <br>
-            The codename "eager" is used to represent an object when eagerly loaded.
-        </p>
+        <ul>
+            <li><code>list</code> codename is used to represent objects in a list</li>
+            <li><code>create</code> codename is used to represent an object when it is created</li>
+            <li><code>edit</code> codename is used to represent an object when edited</li>
+            <li><code>eager</code> codename is used to represent an object when eagerly loaded</li>
+        </ul>
     </div>
 </div>
 
@@ -90,7 +88,7 @@ block('title', 'Create app metadata');
     </div>
     <div class="card-body">
         <p>
-            The Office module sidebar menu is created from the navigation section codenamed "main".
+            The Office module sidebar menu is created from the navigation section codenamed <code>main</code>.
         </p>
     </div>
 </div>
