--- a/view/template/class/group/hierarchy.ejs
+++ b/view/template/class/group/hierarchy.ejs
@@ -11,7 +11,7 @@
             name: 'description'
         }],
         order: {name: 1},
-        link: ['select', {list: _url('list-real-descendants', model)}],
+        link: ['select', {list: encodeURIComponent(_url('list-real-descendants', model))}],
         create: null,
         delete: null
     }
