--- a/view/template/view/group/main.ejs
+++ b/view/template/view/group/main.ejs
@@ -2,7 +2,10 @@
 const columnTemplate = _view.get('_part/group/columns');
 const jsonTemplate = _view.get('_part/attr/json');
 const selectTemplate = _view.get('_part/attr/select');
-const viewSelect2 = {ajax: {url: _url('view/list-select')}, queryData: {pid: model.get('class')}};
+const viewSelect2 = {
+    ajax: {url: _url('view/list-select')},
+    queryData: {pid: model.get('class')}
+};
 const viewUpdate = _url('view/update');
 %>
 
