--- a/view/template/viewRule/_form.ejs
+++ b/view/template/viewRule/_form.ejs
@@ -40,7 +40,7 @@ block('tab', 'Validator');
             format: 'label'
         }],
         order: {name: 1},
-        link: ['class-attr/select', {list: _url('class-attr/list-by-view', {id: model.get('owner')})}],
+        link: ['class-attr/select', {list: encodeURIComponent(_url('class-attr/list-by-view', {id: model.get('owner')}))}],
         create: null,
         delete: null
     }
