--- a/view/template/classAttr/group/mainBase.ejs
+++ b/view/template/classAttr/group/mainBase.ejs
@@ -10,8 +10,7 @@ const checkboxTemplate = _view.get('_part/attr/checkbox');
     items: [{
         template: checkboxTemplate,
         params: {
-            attr: 'required',
-            extHint: 'Attribute value cannot be empty'
+            attr: 'required'
         }
     },{
         template: checkboxTemplate,
