--- a/view/template/viewAttr/filter.ejs
+++ b/view/template/viewAttr/filter.ejs
@@ -7,17 +7,7 @@
             relation: 'viewAttrs'
         },{
             name: 'classAttr',
-            type: 'selector',
-            url: _url('class-attr/list-select-all'),
-            columns: [{
-                name: 'name'
-            },{
-                name: 'label'
-            },{
-                name: 'type',
-                type: 'selector',
-                items: 'labels'
-            }]
+            type: 'id'
         },{
             name: 'createOnRead',
             type: 'boolean'
