--- a/view/template/classAttr/filter.ejs
+++ b/view/template/classAttr/filter.ejs
@@ -32,6 +32,9 @@
             name: 'multiple',
             type: 'boolean'
         },{
+            name: 'original',
+            type: 'id'
+        },{
             name: 'readOnly',
             type: 'boolean'
         },{
