--- a/view/template/classGroup/group/inheritedMain.ejs
+++ b/view/template/classGroup/group/inheritedMain.ejs
@@ -2,11 +2,12 @@
 const checkboxTemplate = _view.get('_part/attr/checkbox');
 const columnTemplate = _view.get('_part/group/columns');
 const overriddenTemplate = _view.get('_part/attr/overridden');
+const textTemplate = _view.get('_part/attr/text');
 %>
 
 <%- include(overriddenTemplate, {
     attr: 'description',
-    template: _view.get('_part/attr/text')
+    template: textTemplate
 }) %>
 
 <%- include(columnTemplate, {
@@ -39,7 +40,7 @@ const overriddenTemplate = _view.get('_part/attr/overridden');
 
 <%- include(overriddenTemplate, {
     attr: 'hint',
-    template: _view.get('_part/attr/string')
+    template: textTemplate
 }) %>
 
 <%- include(overriddenTemplate, {
