--- a/view/template/viewAttr/_form.ejs
+++ b/view/template/viewAttr/_form.ejs
@@ -8,10 +8,22 @@ const overriddenTemplate = _view.get('_part/attr/overridden');
 const staticTemplate = _view.get('_part/attr/static');
 %>
 
-<%- include(staticTemplate, {
-    attr: 'classAttr',
-    displayValue: classAttr.getTitle(),
-    url: ['class-attr/update', classAttr]
+<%- include(columnTemplate, {
+    items: [{
+        template: staticTemplate,
+        params: {
+            attr: 'classAttr',
+            displayValue: classAttr.getTitle(),
+            url: ['class-attr/update', classAttr]
+        }
+    }, {
+        template: staticTemplate,
+        params: {
+            attr: 'view',
+            displayValue: model.getRelatedTitle('view'),
+            url: ['view/update', model.rel('view')]
+        }
+    }]
 }) %>
 
 <%- include(overriddenTemplate, {
