Add hidden option to group

--- a/view/template/classGroup/filter.ejs
+++ b/view/template/classGroup/filter.ejs
@@ -23,6 +23,9 @@
             name: 'loadable',
             type: 'boolean'
         },{
+            name: 'hidden',
+            type: 'boolean'
+        },{
             name: 'readOnly',
             type: 'boolean'
         },{
