--- a/view/template/classGroup/group/main.ejs
+++ b/view/template/classGroup/group/main.ejs
@@ -23,6 +23,11 @@ const textTemplate = _view.get('_part/attr/text');
     }, {
         template: checkboxTemplate,
         params: {
+            attr: 'hidden'
+        }
+    }, {
+        template: checkboxTemplate,
+        params: {
             attr: 'readOnly',
             extHint: 'All attributes in this group are read-only'
         }
