--- a/view/template/viewGroup/filter.ejs
+++ b/view/template/viewGroup/filter.ejs
@@ -20,6 +20,9 @@
             name: 'active',
             type: 'boolean'
         },{
+            name: 'hidden',
+            type: 'boolean'
+        },{
             name: 'loadable',
             type: 'boolean'
         },{
