--- a/view/template/classGroup/group/inheritedMain.ejs
+++ b/view/template/classGroup/group/inheritedMain.ejs
@@ -26,6 +26,12 @@ const textTemplate = _view.get('_part/attr/text');
     }, {
         template: overriddenTemplate,
         params: {
+            attr: 'hidden',
+            template: checkboxTemplate
+        }
+    }, {
+        template: overriddenTemplate,
+        params: {
             attr: 'readOnly',
             template: checkboxTemplate
         }
