--- a/view/template/viewGroup/group/main.ejs
+++ b/view/template/viewGroup/group/main.ejs
@@ -18,6 +18,12 @@ const overriddenTemplate = _view.get('_part/attr/overridden');
     }, {
         template: overriddenTemplate,
         params: {
+            attr: 'hidden',
+            template: checkboxTemplate
+        }
+    }, {
+        template: overriddenTemplate,
+        params: {
             attr: 'loadable',
             template: checkboxTemplate
         }
