--- a/view/template/node/_form.ejs
+++ b/view/template/node/_form.ejs
@@ -33,19 +33,7 @@
         template: _view.get('_part/attr/radioList'),
         params: {
             attr: 'type',
-            items: [{
-                value: '',
-                text: 'Node'
-            }, {
-                value: 'container',
-                text: 'Container'
-            }, {
-                value: 'divider',
-                text: 'Divider'
-            }, {
-                value: 'header',
-                text: 'Header'
-            }]
+            items: 'labels'
         }
     }]
 }) %>
