--- a/view/template/node/filter.ejs
+++ b/view/template/node/filter.ejs
@@ -5,6 +5,10 @@
             type: 'selector',
             url: _url('class/list-select')
         },{
+            name: 'type',
+            type: 'selector',
+            items: 'labels'
+        },{
             name: 'description'
         },{
             name: 'label'
