--- a/view/template/node/index.ejs
+++ b/view/template/node/index.ejs
@@ -14,6 +14,10 @@ block('title', 'Navigation nodes');
             searchable: true,
             sortable: true
         },{
+            name: 'type',
+            format: 'label',
+            sortable: true
+        },{
             name: 'parent',
             format: {
                 name: 'relation',
