--- a/view/template/_part/ruleParam/index.ejs
+++ b/view/template/_part/ruleParam/index.ejs
@@ -1,9 +1,10 @@
 <%
+const setTemplate = _view.get('_part/group/set');
 for (const type of Object.keys(paramModelMap)) {
     if (paramModelMap[type].hasExtendedAttrs()) {
         const title = model.constructor.getAttrValueLabel('type', type);
 %>
-<%- include(_view.get('_part/group/set'), {
+<%- include(setTemplate, {
     id: type,
     title: `${title} parameters`,
     active: true,
