--- a/view/template/_part/ruleParam/string.ejs
+++ b/view/template/_part/ruleParam/string.ejs
@@ -1,17 +1,25 @@
 <!-- studio/_part/ruleParam/string -->
-
-<%- include(_view.get('_part/attr/string'), {
+<%
+const jsonTemplate = _view.get('_part/attr/json');
+const stringTemplate = _view.get('_part/attr/string');
+%>
+<%- include(stringTemplate, {
     attr: 'min'
 }) %>
 
-<%- include(_view.get('_part/attr/string'), {
+<%- include(stringTemplate, {
     attr: 'max'
 }) %>
 
-<%- include(_view.get('_part/attr/string'), {
+<%- include(stringTemplate, {
     attr: 'length'
 }) %>
 
-<%- include(_view.get('_part/attr/string'), {
+<%- include(stringTemplate, {
     attr: 'message'
+}) %>
+
+<%- include(jsonTemplate, {
+    attr: 'when',
+    extHint: model.ATTR_EXT_HINTS.when
 }) %>
