--- a/view/template/_part/ruleParam/unique.ejs
+++ b/view/template/_part/ruleParam/unique.ejs
@@ -1,15 +1,24 @@
 <!-- studio/_part/ruleParam/unique -->
-
-<%- include(_view.get('_part/attr/json'), {
+<%
+const checkboxTemplate = _view.get('_part/attr/checkbox');
+const jsonTemplate = _view.get('_part/attr/json');
+const stringTemplate = _view.get('_part/attr/string');
+%>
+<%- include(jsonTemplate, {
     attr: 'filter',
     extHint: 'Filter condition to search for unique values.\nInput attribute name to create a filter by value of this attribute'
 }) %>
 
-<%- include(_view.get('_part/attr/checkbox'), {
+<%- include(checkboxTemplate, {
     attr: 'ignoreCase',
     label: 'Ignore case when searching for matches'
 }) %>
 
-<%- include(_view.get('_part/attr/string'), {
+<%- include(stringTemplate, {
     attr: 'message'
+}) %>
+
+<%- include(jsonTemplate, {
+    attr: 'when',
+    extHint: model.ATTR_EXT_HINTS.when
 }) %>
