--- a/view/template/node/group/children.ejs
+++ b/view/template/node/group/children.ejs
@@ -1,14 +1,19 @@
-
 <%- include(_view.get('_part/attr/relation'), {
     attr: 'children',
     css: 'no-label',
     data: {
         columns: [{
             name: 'name',
+            searchable: true,
             sortable: true
         }, {
             name: 'label',
+            searchable: true,
             sortable: true
+        }, {
+            name: 'type',
+            sortable: true,
+            format: 'label'
         }, {
             name: 'class',
             format: {
@@ -16,17 +21,12 @@
                 url: _url('class/update')
             }
         }, {
-            name: 'view',
-            format: {
-                name: 'relation',
-                url: _url('view/update')
-            }
-        }, {
             name: 'report',
             format: {
                 name: 'relation',
                 url: _url('report/updatet')
-            }
+            },
+            hidden: true
         }, {
             name: 'orderNumber',
             sortable: true
@@ -35,7 +35,8 @@
         link: null,
         unlink: null,
         create: ['create-by-node', model],
-        modalSort: true
+        modalSort: true,
+        showTop: true
     }
 }) %>
 
