--- a/view/template/node/sort.ejs
+++ b/view/template/node/sort.ejs
@@ -4,9 +4,12 @@
     data: {
         columns: [{
             name: 'name'
-        },{
+        }, {
             name: 'label'
-        },{
+        }, {
+            name: 'type',
+            format: 'label'
+        }, {
             name: 'orderNumber',
             sortable: true
         }]
