--- a/view/template/section/group/nodes.ejs
+++ b/view/template/section/group/nodes.ejs
@@ -1,12 +1,19 @@
-
 <%- include(_view.get('_part/attr/relation'), {
     attr: 'nodes',
     css: 'no-label',
     data: {
         columns: [{
-            name: 'name'
+            name: 'name',
+            searchable: true,
+            sortable: true
         }, {
-            name: 'label'
+            name: 'label',
+            searchable: true,
+            sortable: true
+        }, {
+            name: 'type',
+            sortable: true,
+            format: 'label'
         }, {
             name: 'class',
             format: {
@@ -14,17 +21,12 @@
                 url: _url('class/update')
             }
         }, {
-            name: 'view',
-            format: {
-                name: 'relation',
-                url: _url('view/update')
-            }
-        }, {
             name: 'report',
             format: {
                 name: 'relation',
                 url: _url('report/updatet')
-            }
+            },
+            hidden: true
         }, {
             name: 'orderNumber',
             sortable: true
@@ -33,6 +35,7 @@
         link: null,
         unlink: null,
         create: ['node/create-by-section', model],
-        modalSort: true
+        modalSort: true,
+        showTop: true
     }
 }) %>
