--- a/view/template/viewRule/sort.ejs
+++ b/view/template/viewRule/sort.ejs
@@ -8,7 +8,7 @@
             name: 'type',
             translateData: ''
         },{
-            name: 'param'
+            name: 'description'
         },{
             name: 'orderNumber',
             sortable: true
