--- a/view/template/default/index.ejs
+++ b/view/template/default/index.ejs
@@ -4,91 +4,91 @@ block('title', 'Create app metadata');
 %>
 
 <div class="card">
-    <div class="card-body">
-        <p>
-            The Studio module creates metadata describing domain entities and relationships between them.
-            <br>
-            For example, a Blog App consists of Article, Category, Comment, and others classes.
-        </p>
-        <p>
-            All created entities are located in a separate store.
-            Export them to your app metadata folder to start using.
-        </p>
-    </div>
+  <div class="card-body">
+    <p>
+      The Studio module creates metadata describing domain entities and relationships between them.
+      <br>
+      For example, a Blog App consists of Article, Category, Comment, and others classes.
+    </p>
+    <p>
+      All created entities are located in a separate store.
+      Export them to your app metadata folder to start using.
+    </p>
+  </div>
 </div>
 
 <div class="card-info card mt-3">
-    <div class="card-header">
-        Class attribute
-    </div>
-    <div class="card-body">
-        <p>
-            Class attribute describes a single class element.
-            <br>
-            For example, the Article class consists of Title, Content, Date and other attributes.
-        </p>
-        <p>
-            Each attribute has a specific type depending on the stored data.
-            <br>
-            For example, the Title attribute is of type String, the Content attribute is of type Text.
-        </p>
-    </div>
+  <div class="card-header">
+    Class attribute
+  </div>
+  <div class="card-body">
+    <p>
+      Class attribute describes a single class element.
+      <br>
+      For example, the Article class consists of Title, Content, Date and other attributes.
+    </p>
+    <p>
+      Each attribute has a specific type depending on the stored data.
+      <br>
+      For example, the Title attribute is of type String, the Content attribute is of type Text.
+    </p>
+  </div>
 </div>
 
 <div class="card-success card mt-3">
-    <div class="card-header">
-        Class relation
-    </div>
-    <div class="card-body">
-        <p>
-            The Reference and Back Reference attribute types define the relationship between classes.
-            Link settings are located on the Relation tab.
-            <br>
-            The Reference type keeps a link directly in an instance of the class.
-            For example, a comment has a link to the article it refers to.
-        </p>
-        <p>
-            The Back Reference type retrieves the link data from the referenced class object.
-            <br>
-            For example, comments on an article are retrieved from the back reference,
-            because each comment stores an article ID. Articles do not store any data about comments.
-        </p>
-        <p>
-            The linking can be multiple or single.
-        </p>
-        <ul>
-            <li>An article link in a comment is an example of the single link.</li>
-            <li>Linking to comments in an article is an example of the multiple link.</li>
-        </ul>
-    </div>
+  <div class="card-header">
+    Class relation
+  </div>
+  <div class="card-body">
+    <p>
+      The Reference and Back Reference attribute types define the relationship between classes.
+      Link settings are located on the Relation tab.
+      <br>
+      The Reference type keeps a link directly in an instance of the class.
+      For example, a comment has a link to the article it refers to.
+    </p>
+    <p>
+      The Back Reference type retrieves the link data from the referenced class object.
+      <br>
+      For example, comments on an article are retrieved from the back reference,
+      because each comment stores an article ID. Articles do not store any data about comments.
+    </p>
+    <p>
+      The linking can be multiple or single.
+    </p>
+    <ul>
+      <li>An article link in a comment is an example of the single link.</li>
+      <li>Linking to comments in an article is an example of the multiple link.</li>
+    </ul>
+  </div>
 </div>
 
 <div class="card-primary card mt-3">
-    <div class="card-header">
-        Class view
-    </div>
-    <div class="card-body">
-        <p>
-            Views override class parameters for specific use cases.
-            <br>
-            For example, when displaying objects in a list, only selected attributes can be shown.
-        </p>
-        <ul>
-            <li><code>list</code> codename is used to represent objects in a list</li>
-            <li><code>create</code> codename is used to represent an object when it is created</li>
-            <li><code>edit</code> codename is used to represent an object when edited</li>
-            <li><code>eager</code> codename is used to represent an object when eagerly loaded</li>
-        </ul>
-    </div>
+  <div class="card-header">
+    Class view
+  </div>
+  <div class="card-body">
+    <p>
+      Views override class parameters for specific use cases.
+      <br>
+      For example, when displaying objects in a list, only selected attributes can be shown.
+    </p>
+    <ul>
+      <li><code>list</code> codename is used to represent objects in a list</li>
+      <li><code>create</code> codename is used to represent an object when creating</li>
+      <li><code>edit</code> codename is used to represent an object when editing</li>
+      <li><code>eager</code> codename is used to represent an object when eagerly loaded</li>
+    </ul>
+  </div>
 </div>
 
 <div class="card-warning card mt-3">
-    <div class="card-header">
-        Navigation
-    </div>
-    <div class="card-body">
-        <p>
-            The Office module sidebar menu is created from the navigation section codenamed <code>main</code>.
-        </p>
-    </div>
+  <div class="card-header">
+    Navigation
+  </div>
+  <div class="card-body">
+    <p>
+      The Office module sidebar menu is created from the navigation section codenamed <code>main</code>.
+    </p>
+  </div>
 </div>
