--- a/view/template/viewBehavior/sort.ejs
+++ b/view/template/viewBehavior/sort.ejs
@@ -6,7 +6,7 @@
             name: 'type',
             translateData: ''
         },{
-            name: 'param'
+            name: 'description'
         },{
             name: 'orderNumber'
         }]
