--- a/view/locale/ru/template/default/index.ejs
+++ b/view/locale/ru/template/default/index.ejs
@@ -14,6 +14,11 @@ block('title', 'Создание метаданных приложения');
       Созданные сущности находятся в отдельном хранилище.
       Чтобы данные попали в приложение необходимо экспортировать их в директорию <code>metadata/app</code>.
     </p>
+    <p>
+      Подробности
+      <a href="https://mkhorin.github.io/evado-site/ru/"
+         target="_blank">создания веб-приложения без программирования</a>.
+    </p>
   </div>
 </div>
 
