--- a/view/template/default/index.ejs
+++ b/view/template/default/index.ejs
@@ -14,6 +14,11 @@ block('title', 'Create app metadata');
       All created entities are located in a separate store.
       Export them to your app metadata folder to start using.
     </p>
+    <p>
+      See
+      <a href="https://mkhorin.github.io/evado-site/"
+         target="_blank">creating a web app without programming</a>.
+    </p>
   </div>
 </div>
 
