--- a/view/template/import/meta.ejs
+++ b/view/template/import/meta.ejs
@@ -6,7 +6,7 @@ block('title', title);
 %>
 
 <% if (typeof alert !== 'undefined') { %>
-<div class="alert-warning alert light" data-t=""><%- alert %></div>
+<div class="alert-warning alert" data-t=""><%- alert %></div>
 <% } %>
 
 <%- include(_view.get('_part/attr/metaLocation'), {
